2015-04-16  Corinna Vinschen  <corinna@vinschen.de>

	* sec_acl.cc (set_posix_access): Replace previous patch.  Return
	EINVAL if uid and/or guid is invalid and not backed by an actual
	Windows account.

2015-04-16  Corinna Vinschen  <corinna@vinschen.de>

	* sec_acl.cc (set_posix_access): Workaround owner/group SIDs being NULL.

2015-04-15  Corinna Vinschen  <corinna@vinschen.de>

	* sec_acl.cc (set_posix_access): Handle files with owner == group.
	Rephrase switch statement checking against unfiltered a_type value.
	(get_posix_access): Handle files with owner == group.

2015-04-14  Corinna Vinschen  <corinna@vinschen.de>

	* sec_acl.cc (get_posix_access): Don't use GROUP_OBJ access to fix up
	CLASS_OBJ mask on old-style ACLs.  Fix a comment.

2015-04-12  Corinna Vinschen  <corinna@vinschen.de>

	* sec_acl.cc (set_posix_access): Always make sure Admins have
	WRITE_DAC and WRITE_OWNER permissions.
	* security.h (create_object_sd_from_attribute): Drop handle parameter
	from prototype.
	* security.cc (create_object_sd_from_attribute): Drop handle parameter.
	Just create the standard POSIXy security descriptor.
	(set_object_attribute): Accommodate dropped paramter in call to
	create_object_sd_from_attribute.
	* fhandler_tty.cc: Ditto, throughout.

2015-04-12  Corinna Vinschen  <corinna@vinschen.de>

	* shm.cc (shmget): Fetch segment size from server rather than using
	size argument to accommodate existing segments.  Add comment to explain
	why.

2015-04-11  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_disk_file.cc (fhandler_disk_file::fchmod): Fix typo in
	mask computation.

2015-04-10  Corinna Vinschen  <corinna@vinschen.de>

	* include/cygwin/version.h (CYGWIN_VERSION_DLL_MAJOR): Bump to 2000.
	(CYGWIN_VERSION_DLL_MINOR): Set to 0.

2015-04-04  Jon TURNEY  <jon.turney@dronecode.org.uk>

	* exceptions.cc (call_signal_handler): Set mcontext.cr2 to the
	faulting address.

2015-04-02  Jon TURNEY  <jon.turney@dronecode.org.uk>
